# threat-intel-agent

./: .env.example  .gitignore  DESIGN.md  MODEL_TRAINING.md  README.md  pyproject.toml  requirements.txt
agent/: hunter.py  orchestrator.py  threat_graph.py
api/: dependencies.py  main.py  models.py
api/routes/: blocklist.py  chat.py  explain.py  exports.py  feedback.py  health.py  investigate.py  system.py  webhooks.py  workspaces.py
config/: settings.py
data/: feedback_data.json  siem_config.json
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: DashboardCard.jsx  KeyboardShortcuts.jsx  Layout.jsx  MetricCard.jsx  ReportPreview.jsx  SeverityTag.jsx  StatCard.jsx  ThemeContext.jsx  TimelineView.jsx  Toast.jsx
frontend/src/components/tabs/: AlertsTab.jsx  BlocklistTab.jsx  BulkImportTab.jsx  (+14 more)
models/: feature_cols.joblib  label_encoder.joblib  report.py  risk_model.json  severity_classifier.joblib  training_report.json  validation_report.json
scripts/: balance_and_train.py  build_dataset.py  enrich_dataset.py  validate_model.py
tests/: test_agent.py  test_integration.py
threat-intel-extension/: background.js  content.js  manifest.json  options.html  options.js  popup.html  popup.js  sidebar.html  sidebar.js  styles.css
tools/: abuseipdb.py  mitre_mapper.py  ml_classifier.py  otx.py  shodan.py  train_risk_model.py  virustotal.py
utils/: classifier.py  database.py  decorators.py  ml_features.py  notifications.py  risk_model.py  synthetic_data.py
(+6 files in other folders)
