[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "ARG", "PTH", "PL", "RUF"]
ignore = [
    "E501",     # line too long — handled by formatter
    "ARG001",   # unused function arg — too noisy for @tool functions
    "PLR2004",  # magic value comparison
    "SIM108",   # use ternary — sometimes if/else is clearer
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.coverage.run]
source = ["api", "agent", "utils", "tools", "models", "scripts"]
omit = ["*/tests/*", "*/__pycache__/*"]
